After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683169 - mpeg4videoparse doesn't handle VOP_coded=0 properly
mpeg4videoparse doesn't handle VOP_coded=0 properly
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal normal
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-01 19:50 UTC by Matej Knopp
Modified: 2013-02-14 10:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch. Check VOP_coded and set 0 duration when appropriate (3.53 KB, patch)
2012-09-01 19:50 UTC, Matej Knopp
committed Details | Review
Revert the previous patch (3.53 KB, patch)
2013-02-13 22:25 UTC, Matej Knopp
none Details | Review

Description Matej Knopp 2012-09-01 19:50:56 UTC
Created attachment 223156 [details] [review]
Patch. Check VOP_coded and set 0 duration when appropriate

Some VOPs have VOP_coded set to 0, which means they have no data. Mpeg4Videoparser still gives such VOPs full duration, which results in broken timestamps.
Comment 1 Tim-Philipp Müller 2012-09-02 02:50:33 UTC
Thanks, pushed:

 commit d3219a261a5a7b7340b63c80010009a73b032759
 Author: Matej Knopp <matej.knopp@gmail.com>
 Date:   Sat Sep 1 21:46:19 2012 +0200

    mpeg4videoparse: set 0 duration when vop_coded is 0
    
    https://bugzilla.gnome.org/show_bug.cgi?id=683169

Patch 369/369, eh? :)
Comment 2 Matej Knopp 2013-02-13 22:24:59 UTC
Well, it turned out I was testing this on a broken file. vop_coded 0 means that the previous frame should be repeated, so it should have valid duration
Comment 3 Matej Knopp 2013-02-13 22:25:52 UTC
Created attachment 235958 [details] [review]
Revert the previous patch
Comment 4 Sebastian Dröge (slomo) 2013-02-14 09:31:33 UTC
Ideally you'd use "git revert" for this patch. Could you attach a new one with that?
Comment 5 Tim-Philipp Müller 2013-02-14 10:12:48 UTC
commit 829076358eeed3d27b897ba76be1a0acc86b0095
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Thu Feb 14 09:40:08 2013 +0000

    Revert "mpeg4videoparse: set 0 duration when vop_coded is 0"
    
    This reverts commit d3219a261a5a7b7340b63c80010009a73b032759.
    
    vop_coded 0 means that the previous frame should be repeated,
    so it should have valid duration after all.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=683169