mpeg4videoparse: set 0 duration when vop_coded is 0

https://bugzilla.gnome.org/show_bug.cgi?id=683169